--- a/win2d_village/win2d_village.csproj
+++ b/win2d_village/win2d_village.csproj
@@ -89,9 +89,6 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
-    <Content Include="ApplicationInsights.config">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
@@ -102,6 +99,10 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="sprite\Sprite.cs" />
+    <Compile Include="sprite\SpriteAnimation.cs" />
+    <Compile Include="sprite\SpriteAnimationFrame.cs" />
+    <Compile Include="sprite\SpriteAnimationSet.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
